JAX-RS 2.1 async non-blocking tests okay